Upgrate for Predict point: Up Link, Down Link logic, ui. Update test file, Docker
